--- a/templates/lenses_header.html
+++ b/templates/lenses_header.html
@@ -19,10 +19,13 @@
         <div class="topmenu">
             <h1>
                 <table><tr>
-            <td class="td-center1selected"><a href="{% url 'home:homepage' %}">Home</a></td>
+            <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
             <td class="td-center1selected"><a href="{% url 'lenses:index' %}">Lenses</a></td>
-            <td class="td-center1selected"><a href="{% url 'register' %}">Register</a></td>
-
+            <td class="td-center1"><a {% if user.is_authenticated %}
+                                          <li><a href="{% url 'logout'%}">Logout</a></li>
+                                      {% else %}
+                                          <li><a href="{% url 'login'%}">Login</a></li>
+                                      {% endif %}</a> </td>
 
                 </tr></table>
             </h1>
