--- a/templates/login_header.html
+++ b/templates/login_header.html
@@ -19,9 +19,9 @@
         <div class="topmenu">
             <h1>
                 <table><tr>
-            <td class="td-center1selected"><a href="{% url 'home:homepage' %}">Home</a></td>
-            <td class="td-center1selected"><a href="{% url 'lenses:index' %}">Lenses</a></td>
-            <td class="td-center1selected"><a href="{% url 'register' %}">Register</a></td>
+            <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
+            <td class="td-center1"><a href="{% url 'lenses:index' %}">Lenses</a></td>
+            <td class="td-center1selected"><a href="{% url 'login' %}">Login</a></td>
 
 
                 </tr></table>
