added a user profile page

--- a/templates/user_header.html
+++ b/templates/user_header.html
@@ -20,8 +20,8 @@
             <h1>
                 <table><tr>
             <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
-            <td class="td-center1selected"><a href="{% url 'lenses:index' %}">Lenses</a></td>
-            <td class="td-center1"><a {% if user.is_authenticated %}
+            <td class="td-center1"><a href="{% url 'lenses:index' %}">Lenses</a></td>
+            <td class="td-center1selected"><a {% if user.is_authenticated %}
                                           <li><a href="{% url 'users:index'%}">User</a></li>
                                       {% else %}
                                           <li><a href="{% url 'login'%}">Login</a></li>
