--- a/templates/lenses_header.html
+++ b/templates/lenses_header.html
@@ -21,6 +21,7 @@
                 <table><tr>
             <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
             <td class="td-center1selected"><a href="{% url 'lenses:index' %}">Lenses</a></td>
+            <td class="td-center1"><a href="{% url 'groups:index' %}">Groups</a></td>
             <td class="td-center1"><a {% if user.is_authenticated %}
                                           <li><a href="{% url 'users:index'%}">{{user.username}}</a></li>
                                       {% else %}
