--- a/templates/lenses_index.html
+++ b/templates/lenses_index.html
@@ -32,7 +32,7 @@
     </div>-->
 
     <div class="content container">
-        <p class="comment">Click on the names for detailed information. Click on the headers to sort the table.</p>
+        <p class="comment">Click on the names for detailed information on individual lenses. Click on the headers to sort the table.</p>
     </div>
 
 
