--- a/templates/groups_header.html
+++ b/templates/groups_header.html
@@ -21,8 +21,8 @@
                 <table><tr>
             <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
             <td class="td-center1"><a href="{% url 'lenses:index' %}">Lenses</a></td>
-            <td class="td-center1"><a href="{% url 'groups:index' %}">Groups</a></td>
-            <td class="td-center1selected"><a {% if user.is_authenticated %}
+            <td class="td-center1selected"><a href="{% url 'groups:index' %}">Groups</a></td>
+            <td class="td-center1"><a {% if user.is_authenticated %}
                                           <li><a href="{% url 'users:index'%}">{{user.username}}</a></li>
                                       {% else %}
                                           <li><a href="{% url 'login'%}">Login</a></li>
