--- a/templates/lens_detail.html
+++ b/templates/lens_detail.html
@@ -13,12 +13,14 @@
                 <th class="th-center">Declination </th>
                 <th class="th-center">Lens redshift</th>
                 <th class="th-center">Source redshift </th>
+                <th class="th-center">Lens owner </th>
             </tr>
             <tr>
                 <td class="td-center">{{lens.ra|floatformat:5}}</td>
                 <td class="td-center">{{lens.dec|floatformat:5}}</td>
                 <td class="td-center">{{lens.zlens|floatformat:4}}</td>
                 <td class="td-center">{{lens.zsource|floatformat:4}}</td>
+                <td class="td-center">{{lens.owner}}</td>
             </tr>
         </table>
     </div>
