--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -46,7 +46,7 @@
         </table>
 
     <div class="section">
-        <h1>My lenses ({{ user.getOwnedLenses|length }}) </h1>
+        <h1>My lenses ({{ user.getOwnedObjects.Lenses|length }}) </h1>
     </div>
     <div class="content container">
         <table class="sortable">
@@ -58,7 +58,7 @@
                 <th class="th-center">Declination J2000</th>
 
             </tr>
-        {% for lens in user.getOwnedLenses %}
+        {% for lens in user.getOwnedObjects.Lenses %}
             <tr>
                 <td class="td-center"><a href="{% url 'lenses:lens_detail' lens_name=lens.name %}">{{lens.name}}</td>
                 <td class="td-center">{{lens.zlens|floatformat:2}}</td>
