Modified all the lenses related pages and added a master header template for the whole site (except login and register, to be revisited). Most importantly I added a formset to insert lenses in the database and the corresponding view that checks for proximity. This is work in progress.

--- a/templates/login_header.html
+++ b/templates/login_header.html
@@ -20,7 +20,7 @@
             <h1>
                 <table><tr>
             <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
-            <td class="td-center1"><a href="{% url 'lenses:index' %}">Lenses</a></td>
+            <td class="td-center1"><a href="{% url 'lenses:lens-list' %}">Lenses</a></td>
             <td class="td-center1"><a href="{% url 'groups:index' %}">Groups</a></td>
             <td class="td-center1selected"><a href="{% url 'login' %}">Login</a></td>
 
