--- a/templates/lens_detail.html
+++ b/templates/lens_detail.html
@@ -1,4 +1,4 @@
-{% extends 'lenses_header.html' %}
+{% extends 'master_header.html' %}
 {% block content %}
     <div class="content container">
         <p class="centred_name">{{lens.name}}</p>
