--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -20,10 +20,14 @@
       <h1>
         <table>
 	  <tr>
-            <td class="td-center1"><a href="{% url 'home:homepage' %}">Home</a></td>
-            <td class="td-center1selected"><a href="{% url 'lenses:lens-index' %}">Lenses</a></td>
-            <td class="td-center1"><a href="{% url 'groups:index' %}">Groups</a></td>
-            <td class="td-center1">
+          {% with url_name=request.resolver_match.url_name %}
+            {% with url_base=request.get_full_path %}
+            <td class="td-center1{% if url_name in 'homepage,' %}selected{% endif %}"><a href="{% url 'home:homepage' %}">Home</a></td>
+            <td class="td-center1{% if '/lenses/' in url_base %}selected{% endif %}"><a href="{% url 'lenses:lens-index' %}">Lenses</a></td>
+            <td class="td-center1{% if '/groups/' in url_base %}selected{% endif %}"><a href="{% url 'groups:index' %}">Groups</a></td>
+            <td class="td-center1{% if '/users/' in url_base %}selected{% endif %}">
+            {% endwith %}
+          {% endwith %}
 	      {% if user.is_authenticated %}
               <a href="{% url 'users:user_profile'%}">{{user.username}}</a>
               {% else %}
