Lens add fully functional! But, I need to implement a validation to make sure the 'insert' option is selected, and make sure I am not checking proximity to private lenses.

--- a/templates/lens_add.html
+++ b/templates/lens_add.html
@@ -101,13 +101,20 @@
 	  
 	</td>
 	<td>
+
+	  {% if existing %}
+	  {{ form.insert.errors }}
+	  {{ form.insert.label_tag }}
+	  {{ form.insert }}
+	  {% endif %}
+	  
+	</td>
+	<td>
 	  
 	  {% if existing %}
 	  {% for lens in existing %}
 	  {% include 'lens_visit_card.html' with lens=lens %}
 	  {% endfor %}
-	  {% else %}
-	  no
 	  {% endif %}
 	  
 	</td>
