--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -1,95 +1,103 @@
 {% extends 'master_header.html' %}
 {% block content %}
 
-    <div class="section">
-        <h1>User Profile page</h1>
-    </div>
+<div class="section">
+  <h1>User Profile page</h1>
+</div>
 
-    <!--<div class="content container">
+<!--<div class="content container">
     <div id="form_container">
-
-        <form id="form_57258" class="appnitro"  method="get" action="">
-            <div class="form_description">
-                <p>Input Ra and Dec coordinates for more detailed search</p>
-            </div>
-
-            <div>
-                <label class="description" for="ra_min">Ra min </label>
-                <input id="ra_min" name="ra_min" class="element text medium" type="text" maxlength="255" value=""/>
-                <label class="description" for="ra_max">Ra max </label>
-                <input id="ra_max" name="ra_max" class="element text medium" type="text" maxlength="255" value=""/>
-                <label class="description" for="dec_min">Dec min </label>
-                <input id="dec_min" name="dec_min" class="element text medium" type="text" maxlength="255" value=""/>
-                <label class="description" for="dec_max">Dec max </label>
-                <input id="dec_max" name="dec_max" class="element text medium" type="text" maxlength="255" value=""/>
-
-                <input type="hidden" name="form_id" value="57257" />
-                <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
-                <input id="saveForm" class="button_text" type="submit" name="download" value="Download" />
-            </div>
-        </form>
+      
+      <form id="form_57258" class="appnitro"  method="get" action="">
+        <div class="form_description">
+          <p>Input Ra and Dec coordinates for more detailed search</p>
+        </div>
+	
+        <div>
+          <label class="description" for="ra_min">Ra min </label>
+          <input id="ra_min" name="ra_min" class="element text medium" type="text" maxlength="255" value=""/>
+          <label class="description" for="ra_max">Ra max </label>
+          <input id="ra_max" name="ra_max" class="element text medium" type="text" maxlength="255" value=""/>
+          <label class="description" for="dec_min">Dec min </label>
+          <input id="dec_min" name="dec_min" class="element text medium" type="text" maxlength="255" value=""/>
+          <label class="description" for="dec_max">Dec max </label>
+          <input id="dec_max" name="dec_max" class="element text medium" type="text" maxlength="255" value=""/>
+	  
+          <input type="hidden" name="form_id" value="57257" />
+          <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
+          <input id="saveForm" class="button_text" type="submit" name="download" value="Download" />
+        </div>
+      </form>
     </div>
-    </div>-->
+</div>-->
 
-    <div class="content container">
-        <table class="sortable">
-            <tr>
-                <th class="th-center">Name</th>
-                 <th class="th-center">Affiliation</th>
+<div class="section">
+  <h1>My details</h1>
+</div>
+<div class="content container">
+  <table class="sortable">
+    <tr>
+      <th class="th-center">Name</th>
+      <th class="th-center">Affiliation</th>    
+    </tr>
+    <tr>
+      <td class="td-center">{{user.username}}</td>
+      <td class="td-center">{{user.affiliation}}</td>
+    </tr>
+  </table>
+</div>
 
-            </tr>
-            <tr>
-                <td class="td-center">{{user.username}}</td>
-                <td class="td-center">{{user.affiliation}}</td>
 
-            </tr>
-        </table>
 
-    <div class="section">
-        <h1>My lenses ({{ user.getOwnedObjects.Lenses|length }}) </h1>
-    </div>
-    <div class="content container">
-        <table class="sortable">
-            <tr>
-                <th class="th-center">Name</th>
-                <th class="th-center">Lens redshift</th>
-                <th class="th-center">Source redshift</th>
-                <th class="th-center">Right Ascension J2000</th>
-                <th class="th-center">Declination J2000</th>
+<div class="section">
+  <h1>My groups ({{ user.getGroupsIsMember|length }}) </h1>
+</div>
+<div class="content container">
+  <table class="sortable">
+    <tr>
+      <th class="th-center">Name</th>
+      <th class="th-center">Description</th>  
+    </tr>
+    {% for group in user.getGroupsIsMember %}
+    <tr>
+      <td class="td-center"><a href="{% url 'groups:group_detail' group_name=group.name %}">{{group.name}}</td>
+      <td class="td-center">{{group.description}}</td>  
+    </tr>
+    {% endfor %}
+  </table>
+  
+  <a href="{% url 'logout'%}">LOGOUT</a>
+</div>
 
-            </tr>
-        {% for lens in user.getOwnedObjects.Lenses %}
-            <tr>
-                <td class="td-center"><a href="{% url 'lenses:lens_detail' lens_name=lens.name %}">{{lens.name}}</td>
-                <td class="td-center">{{lens.zlens|floatformat:2}}</td>
-                <td class="td-center">{{lens.zsource|floatformat:2}}</td>
-                <td class="td-center">{{lens.ra|floatformat:5}}</td>
-                <td class="td-center">{{lens.dec|floatformat:5}}</td>
 
-            </tr>
-        {% endfor %}
-        </table>
-    <div class="section">
-        <h1>My groups ({{ user.getGroups|length }}) </h1>
-    </div>
-    
-    <div class="content container">
-        <table class="sortable">
-            <tr>
-                <th class="th-center">Name</th>
-                <th class="th-center">Description</th>
 
-            </tr>
-        {% for group in user.getGroups %}
-            <tr>
-                <td class="td-center"><a href="{% url 'groups:group_detail' group_name=group.name %}">{{group.name}}</td>
-                <td class="td-center">{{group.description}}</td>
 
-            </tr>
-        {% endfor %}
-        </table>
 
-     <a href="{% url 'logout'%}">LOGOUT</a>
-    </div>
+<div class="section">
+  <h1>My lenses ({{ user.getOwnedObjects.Lenses|length }}) </h1>
+</div>
+<div class="content container">
+  <table class="sortable">
+    <tr>
+      <th class="th-center">Name</th>
+      <th class="th-center">Lens redshift</th>
+      <th class="th-center">Source redshift</th>
+      <th class="th-center">Right Ascension J2000</th>
+      <th class="th-center">Declination J2000</th>	
+    </tr>
+    {% for lens in user.getOwnedObjects.Lenses %}
+    <tr>
+      <td class="td-center"><a href="">{{lens.name}}</td>
+      <td class="td-center">{{lens.zlens|floatformat:2}}</td>
+      <td class="td-center">{{lens.zsource|floatformat:2}}</td>
+      <td class="td-center">{{lens.ra|floatformat:5}}</td>
+      <td class="td-center">{{lens.dec|floatformat:5}}</td>  
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 
 {% endblock content %}
+  
+
+<td class="td-center"><a href="{% url 'lenses:lens-detail' lens_name=lens.name %}">{{lens.name}}</td>
