--- a/templates/lens_add.html
+++ b/templates/lens_add.html
@@ -3,19 +3,18 @@
 {% block content %}
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript" src="{% static 'lenses/js/jquery.formset.js' %}"></script>
 <script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_add.css' %}"/>
 <link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
-
-
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
 <h1>Add a new lens</h1>
 
 <p>
-  For now, this is a static formset with <span style="font-weight:bold">three</span> forms. Later we want to changee this into a dynamic one (see <a href="https://github.com/dallasmorningnews/django-dynamic-formsets">here</a> and <a href="https://github.com/elo80ka/django-dynamic-formset">here</a>).
   To be within the check radius of existing lenses set RA= 8.368 and DEC= -5.6694
 </p>
 
@@ -58,43 +57,31 @@
 		    </table>
 		  </div>
 		</td>
+
+
+		<!-- Second column -->
+		<td>
+		  <div class="column">
+		    <table>
+		      <tr><td>{{ form.lens_type.errors }}</td><td>{{ form.lens_type.label_tag }}</td><td>{{ form.lens_type }}</td></tr>
+		      <tr><td>{{ form.source_type.errors }}</td><td>{{ form.source_type.label_tag }}</td><td>{{ form.source_type }}</td></tr>
+		      <tr><td>{{ form.image_conf.errors }}</td><td>{{ form.image_conf.label_tag }}</td><td>{{ form.image_conf }}</td></tr>
+		      <tr><td>{{ form.info.errors }}</td><td colspan="2">{{ form.info }}</td></tr>
+		    </table>
+		  </div>
+		</td>
+
+
+		<!-- Fourth column -->
+		<td>
+		  <div class="column">
+		    <table>
+		      <tr><td><div class="lens-mugshot"><img src="" alt="Lens image" /></div></td></tr>
+		    </table>
+		  </div>
+		</td>
+
 		
-		<!-- <\!-- Fourth column -\-> -->
-		  <!-- <td> -->
-		    <!--   <div class="column"> -->
-		      <!--     <table> -->
-			<!-- 	<tr><td>{{ form.lens_type.errors }}</td></tr> -->
-			<!-- 	<tr><td>{{ form.lens_type.label_tag }}</td></tr> -->
-			<!-- 	<tr><td>{{ form.lens_type }}</td></tr> -->
-			<!-- 	<tr><td>{{ form.source_type.errors }}</td></tr> -->
-			<!-- 	<tr><td>{{ form.source_type.label_tag }}</td></tr> -->
-			<!-- 	<tr><td>{{ form.source_type }}</td></tr> -->
-			<!--     </table> -->
-		      <!--   </div> -->
-		    <!-- </td> -->
-		  
-		  <!-- <\!-- Third column -\-> -->
-		    <!-- <td> -->
-		      <!--   <div class="column"> -->
-			<!--     <table> -->
-			  <!-- 	<tr><td>{{ form.image_conf.errors }}</td></tr> -->
-			  <!-- 	<tr><td>{{ form.image_conf.label_tag }}</td></tr> -->
-			  <!-- 	<tr><td>{{ form.image_conf }}</td></tr> -->
-			  <!--     </table> -->
-			<!--   </div> -->
-		      <!-- </td> -->
-		    
-  		    <!-- <\!-- Sixth column -\-> -->
-		      <!-- <td> -->
-			<!--   <div class="column"> -->
-			  <!--     <table> -->
-			    <!-- 	<tr><td>{{ form.info.errors }}</td></tr> -->
-			    <!-- 	<tr><td>{{ form.info.label_tag }}</td></tr> -->
-			    <!-- 	<tr><td>{{ form.info }}</td></tr> -->
-			    <!--     </table> -->
-			  <!--   </div> -->
-			<!-- </td> -->
-		      
 	      </tr>
 	    </table>
 	  </div>
