--- a/templates/lens_add_update.html
+++ b/templates/lens_add_update.html
@@ -25,8 +25,6 @@
     {{ lens_formset.management_form }}
     {{ lens_formset.non_field_errors }}
     <input type="hidden" name="check" value="true">
-    <input type="hidden" name="mode" value="{{ mode }}">
-    <input type="hidden" name="initial" value="{{ initial }}">
     
     <table class="master">
       {% for form,existing in new_existing %}
@@ -121,13 +119,13 @@
   <div class="button-div">
     <table>
       <tr>
-	{% if mode == 'create' %}
+	{% if request.resolver_match.url_name == 'lens-add' %}
 	<td><div class="add-button"></div></td>
 	<td><button id="toggle-access-level" type="button">Toggle access_level all</button></td>
 	<td><button type="submit">Create Lenses</button></td>
 	{% else %}
-	<td><button type="submit">Update Lenses</button></td>	
-	{% endif %}
+	<td><button type="submit">Update</button></td>
+	{% endif %}	
       </tr>
     </table>
   </div>
