Wrote functions in SingleObject that return users and groups with access to it.

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -100,6 +100,10 @@
       {% endfor %}
     </table>
     <button type="submit">Update lenses</button>
+    <button type="button">Make private/public</button>
+    <button type="button">Give/revoke access</button>
+    <button type="button">Cede ownership</button>
+    <button type="button">Delete lenses</button>
   </form>
 </div>
 
