Delete lenses basic functionality is almost there, just need to check for the justification if there is any public lens.

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -77,7 +77,7 @@
   <h1>My lenses ({{ user.getOwnedObjects.Lenses|length }}) </h1>
 </div>
 <div class="content container">
-  <form id="list-form" method="POST" action="{% url 'lenses:lens-update' %}">
+  <form id="list-form" method="POST">
     {% csrf_token %}
     <table class="sortable">
       <tr>
@@ -86,24 +86,28 @@
 	<th class="th-center">Lens redshift</th>
 	<th class="th-center">Source redshift</th>
 	<th class="th-center">Right Ascension J2000</th>
-	<th class="th-center">Declination J2000</th>	
+	<th class="th-center">Declination J2000</th>
+	<th class="th-center">Access level</th>
+	<th class="th-center">Owner</th>
       </tr>
       {% for lens in user.getOwnedObjects.Lenses %}
       <tr>
-	<td><input type="checkbox" name="ids" value="{{ lens.id }}" /></td>
+	<td><input type="checkbox" name="ids" value="{{ lens.id }}"></td>
 	<td class="td-center"><a href="">{{lens.name}}</td>
 	<td class="td-center">{{lens.zlens|floatformat:2}}</td>
 	<td class="td-center">{{lens.zsource|floatformat:2}}</td>
 	<td class="td-center">{{lens.ra|floatformat:5}}</td>
-	<td class="td-center">{{lens.dec|floatformat:5}}</td>  
+	<td class="td-center">{{lens.dec|floatformat:5}}</td>
+	<td class="td-center">{{lens.access_level}}</td>
+	<td class="td-center">{{lens.owner}}</td>
       </tr>
       {% endfor %}
     </table>
-    <button type="submit">Update lenses</button>
+    <button type="submit" formaction="{% url 'lenses:lens-update' %}">Update lenses</button>
     <button type="button">Make private/public</button>
     <button type="button">Give/revoke access</button>
     <button type="button">Cede ownership</button>
-    <button type="button">Delete lenses</button>
+    <button type="submit" formaction="{% url 'lenses:lens-delete' %}">Delete lenses</button>
   </form>
 </div>
 
