--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -71,7 +71,12 @@
 
 
 
-
+<div class="section">
+  <h1>My Confirmation tasks</h1>
+</div>
+<div class="content container">
+  <a href="{% url 'confirmation:list-tasks' %}">All tasks</a>
+</idv>
 
 <div class="section">
   <h1>My lenses ({{ user.getOwnedObjects.Lenses|length }}) </h1>
