Added confirmation tasks and notifications to the user profile page. Added a manager to confirmation tasks. I should add some more managers, or functions of a manager, to handle all the queries to the Confirmation task model - that should be simple.

--- a/templates/sled_notifications.html
+++ b/templates/sled_notifications.html
@@ -1,3 +1,6 @@
+{% extends 'master_header.html' %}
+{% block content %}
+
 <div>
   <table>
     <thead>
@@ -17,6 +20,11 @@
     <td>{{ note.data.object_ids }}</td>
     <td>{{ note.level }}</td>
   </tr>
+  {% empty %}
+    <tr>
+      <td colspan="6">No notifications</td>
+    </tr>
   {% endfor %}
   </table>  
 </div>
+{% endblock content %}
