--- a/templates/lens_index.html
+++ b/templates/lens_index.html
@@ -8,7 +8,7 @@
     <li><a href="{% url 'lenses:lens-query' %}">Query lenses</a></li>
     <li>Browse collections</li>
     <li><a href="{% url 'lenses:lens-add' %}">Add new lenses</a></li>
-    <li>Manage your lenses</li>
+    <li><a href="{% url 'users:user-profile' %}">Manage your lenses</li>
   </ul>
 </div>
 
