--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -30,7 +30,7 @@
             {% endwith %}
           {% endwith %}
 	      {% if user.is_authenticated %}
-              <a href="{% url 'users:user_profile'%}">{{user.username}}</a>
+              <a href="{% url 'users:user-profile'%}">{{user.username}}</a>
               {% else %}
               <a href="{% url 'login'%}">Login</a>
               {% endif %}
