--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -162,7 +162,7 @@
     </table>
     <button type="submit" formaction="{% url 'lenses:lens-update' %}">Update lenses</button>
     <button type="button">Make private/public</button>
-    <button type="button">Give/revoke access</button>
+    <button type="submit" formaction="{% url 'lenses:lens-give-access' %}">Give/revoke access</button>
     <button type="button">Cede ownership</button>
     <button type="submit" formaction="{% url 'lenses:lens-delete' %}">Delete lenses</button>
   </form>
