--- a/templates/lens_give_access.html
+++ b/templates/lens_give_access.html
@@ -1,6 +1,12 @@
 {% extends 'master_header.html' %}
-
+{% load static %}
 {% block content %}
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
+<script type="text/javascript" src="{% static 'lenses/js/lens_give_access.js' %}"></script>
 
 <h1>Give access to private lenses</h1>
 
@@ -29,5 +35,8 @@
   </tbody>
 </table>
 
+<div style="width:800px;border:1px solid black">
+  <select id="users-autocomplete" class="js-example-data-ajax" multiple="multiple"></select>
+</div>
 
 {% endblock content %}
